bugfixes and https!

--- a/src/dev/confs/zoogies.conf
+++ b/src/dev/confs/zoogies.conf
@@ -1,18 +1,57 @@
 server{
-	listen 80;
+	listen 443;
+	ssl on;
+	ssl_certificate /etc/letsencrypt/live/spotiguess.zoogies.live/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/spotiguess.zoogies.live/privkey.pem;
 	server_name api.spotiguess.zoogies.live;
 	location / {
 		include proxy_params;
 		proxy_pass http://unix:/home/pi/spotiguess/src/dev/server/spotiguessapi.sock;
 	}
+	location /socket.io{
+		include proxy_params;
+		proxy_http_version 1.1;
+		proxy_buffering off;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
+		proxy_pass http://unix:/home/pi/spotiguess/src/dev/server/spotiguessapi.sock;
+	}
 }
-
 server {
 	listen 80;
+	server_name api.spotiguess.zoogies.live;
+	return 301 https://api.spotiguess.zoogies.live$request_uri;
+}
+server {
+	listen 443;
+	ssl on;
+	ssl_certificate /etc/letsencrypt/live/zoogies.live/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/zoogies.live/privkey.pem;
 	server_name spotiguess.zoogies.live;
-	
 	location / {
 		include proxy_params;
 		proxy_pass http://unix:/home/pi/spotiguess/src/dev/server/spotiguess.sock;
 	}
+}
+server {
+	listen 80;
+	server_name spotiguess.zoogies.live;
+	return 301 https://spotiguess.zoogies.live$request_uri;
+}
+server {
+	listen 443;
+	ssl on;
+	ssl_certificate /home/pi/spotiguess/src/dev/ssl/ssl-bundle.crt;
+	ssl_certificate_key /home/pi/spotiguess/src/dev/ssl/zoogies.live.key;
+	server_name zoogies.live;
+	
+	location / {
+		include proxy_params;
+		proxy_pass https://localhost:8580;
+	}
+}
+server{
+	listen 80;
+	server_name zoogies.live;
+	return 301 https://zoogies.live$request_uri;
 }
